# toronto-viz

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  bundle.js  docker-compose.yml  index.html  justfile  main.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: docker.yml  workflow.yml
deploy/: backup.py  docker-entrypoint.sh  gunicorn.conf.py  install.py  install.sh  run.sh  toronto-viz.service
scss/: _layout.scss  _ui.scss  _variables.scss  main.scss
src/: charting.js  charting.ts  colorbar.js  colorbar.ts  data.js  data.ts  index.js  index.ts  map.js  map.ts  theme.js  theme.ts  types.ts
templates/: index.html.liquid
tests/: conftest.py  test_data.py  test_scraper.py  test_server.py  test_utils.py
vizlib/: __init__.py  data.py  db.py  routes.py  scraper.py  server.py  server_utils.py  util.py
vizlib/sql/: avg_speeds.sql  build_routes.sql  build_stops.sql  current_locations.sql  current_paths.sql  route_slowdowns.sql  routes.sql  single_route.sql  stops.sql
