[project]
name = "toronto-viz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adbc-driver-manager>=1.11.0",
    "adbc-driver-sqlite>=1.11.0",
    "aiohttp>=3.13.5",
    "cyclopts>=4.10.1",
    "duckdb>=1.5.1",
    "duckdb-engine>=0.17.0",
    "flask[async]>=3.1.3",
    "gunicorn>=25.3.0",
    "loguru>=0.7.3",
    "polars[pyarrow]>=1.39.3",
    "pyarrow>=23.0.1",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.9",
    "ty>=0.0.29",
]
